Fixed layout problem

--- a/src/components/UI/DropZone/DropZone.css
+++ b/src/components/UI/DropZone/DropZone.css
@@ -1,3 +1,7 @@
+button.dropzone {
+    text-wrap: inherit;
+}
+
 .dropzone {
     height: 150px;
     border: 1px dashed #c4c4c4;
